--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-menubar-app",
+  "name": "example",
   "version": "1.0.0",
   "description": "example menubar electron app",
   "dependencies": {
